# econ143-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  writeup.ipynb
data/: README.md  m0_audit_summary.json  m1_setups.parquet  m3_setups_with_residuals.parquet  m4_results.parquet  m6_bootstrap.parquet  spy_daily.parquet
data/factors/: ff3_umd_daily.parquet
data/interim/: m5_oos_results.parquet  setups.parquet  setups_with_features.parquet
data/interim/reference/: yfinance_failures.csv  yfinance_types.parquet
reports/: audit.md  m1_rule_redesign.md  m1_sample_setups.csv  m1_validation.md  m2_validation.md  m3_validation.md  m4_estimation.md  m5_walkforward.md  m6_inference.md  writeup.md
reports/writeup_assets/tables/: m4_coef_table.md  m5_oos_yearly.md  m6_inference.md
src/: _fetch_ticker_adr_fields.py  _fetch_ticker_types.py  m0_audit.py  m1_universe.py  m2_features.py  m3_factors.py  m4_estimation.py  m5_walkforward.py  m6_bootstrap.py  m7_assets.py  utils.py
