[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ec143-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "arch>=6.0",
    "linearmodels>=5.0",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
